Bug 1152651, copy multiple messages from maildir to maildir fails, r=neil, a=rkent